NIFI-13532 Fixed Flow Configuration History Sorting when Filtered This closes #9179
Signed-off-by: Joseph Witt <joewitt@apache.org>